--- a/maksymv.html
+++ b/maksymv.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <div class="header__logo"><img src="assets/img/logo.png" alt="logo"><span>RED CAT THAY</span>
+    <div class="header__logo"><a href="#"><img src="assets/img/logo.png" alt="logo"><span>RED CAT THAY</span></a>
     </div>
     <div class="header__burger">
       <span></span>
@@ -15,9 +15,9 @@
     <nav class="header__nav">
       <div class="header__nav__close"></div>
       <ul class="header__list">
-        <li>Maksym</li>
-        <li>Benjamin</li>
-        <li>Nafion</li>
+        <li><a href="maksym/maksym.html">Maksym</a></li>
+        <li><a href="Ben/">Benjamin</a></li>
+        <li><a href ="CodeNaf/">Nafion</a></li>
       </ul>
     </nav>
   </header>
