--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="maksym.css">
   <title>Red Cat Thay</title>
 </head>
 <body>
   <header>
-    <div class="header__logo"><a href="#"><img src="assets/img/logo.png" alt="logo"><span>RED CAT THAY</span></a>
+    <div class="header__logo__box"><a href="#"><img class="header__logo" src="assets/img/logo.png" alt="logo"><span>
+      <span class="red_name">RED</span> CAT <span class="brown__name">THAY</span></span></a>
     </div>
     <div class="header__burger">
       <span></span>
@@ -114,5 +115,6 @@
         <li><input class="button" type="button" value="Remonter en haut de la page" /></li>
     </ul>
 </footer>
+<script src="maksym.js"></script>
 </body>
 </html>
