--- a/CodeNaf/index.html
+++ b/CodeNaf/index.html
@@ -113,6 +113,6 @@
         <li><input class="button" type="button" value="Remonter en haut de la page" /></li>
     </ul>
 </footer>
-<script type="textjavascrit" src="./index.js"></script>
+<script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
