--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="maksym.css">
+  <link rel="stylesheet" href="style.css">
   <title>Red Cat Thay</title>
 </head>
 <body>
@@ -115,6 +115,6 @@
         <li><input class="button" type="button" value="Remonter en haut de la page" /></li>
     </ul>
 </footer>
-<script src="maksym.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
