commit before lunch

--- a/maksym/maksym.html
+++ b/maksym/maksym.html
@@ -21,8 +21,26 @@
   </header>
   <main>
     <div class="wrapper">
-      
+      <section class="presentaition">
+        <h1 class="presentaition__title">Chat Maksym</h1>
+        <div class="maks__photo">
+          <img src="img/cat_maks.png" alt="Voznichka Maksym">
+        </div>
+        <p class="presentaition__text background_white_tr">Bonjour, invité de notre petit village.
+          Je m'appelle Max.
+          Vous avez visité la page de l'un des créateurs de ce monde félin, et il n'y a de place que pour les chats. Ne manquez pas l'occasion de participer à notre idée et de faire une pause dans votre routine en vous plongeant dans des histoires de chats intéressantes.</p>
+      </section>
     </div>
+    <section class="hist">
+      <div class="box__anim">
+        <div class="sprite"></div>
+      </div>
+      <h2 class="hist__title">Mon histoire</h2>
+      <p>L'histoire de Maksym, le chat Muay Thai et roi de la restauration rapide
+        Sous le soleil brûlant de Thaïlande, dans un village paisible bordé par une rivière scintillante, vivait un chat pas comme les autres. Son nom était Maksym, et il était connu pour deux choses : sa passion pour le Muay Thai et son talent pour la restauration rapide.
+        
+        Le village, un havre de paix aux maisons de bois et de bambou, était entouré de rizières verdoyantes et de champs de légumes luxuriants. Les habitants, des gens simples et chaleureux, vivaient en harmonie avec la nature. C'est dans ce cadre idyllique que Maksym grandissait, un chat heureux et énergique.</p>
+    </section>
   </main>
   <script src="maksym.js"></script>
 </body>
