--- a/CodeNaf/index.html
+++ b/CodeNaf/index.html
@@ -1,130 +1,121 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Red Cat Thay</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Red Cat Thay</title>
 </head>
+
 <body>
-  <header>
-    <div class="header__logo"><a href="#"><img src="../assets/img/logo.png" alt="logo"><span>RED CAT THAY</span></a>
-    </div>
-    <div class="header__burger">
-      <span></span>
-    </div>
-    <nav class="header__nav">
-      <div class="header__nav__close"></div>
-      <ul class="header__list">
-        <li><a href="maksym/maksym.html">Maksym</a></li>
-        <li><a href="Ben/">Benjamin</a></li>
-        <li><a href ="CodeNaf/">Nafion</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-        <div>
-            <p><img src="../assets/img/villageois.jpg" alt=""></p>
-            <p class="description-text">L'histoire de Poun, le chat boxeur et pizzaiolo
-            Dans un petit village de Thaïlande, niché au bord d'une rivière paisible, vivait un chat pas comme les autres.
-            Son nom était Poun, et il avait deux passions : la boxe et la pizza. (villageois)</p>
+    <header>
+        <div class="header__logo__box"><a href="../index.html"><img class="header__logo" src="../assets/img/logo.png"
+                    alt="logo"><span>
+                    <span class="red_name">RED</span> CAT <span class="brown__name">THAY</span></span></a>
         </div>
-        <div>
-            <p><img src="../assets/img/village.jpg" alt="">
-            <p class="description-text">
-                Le village, un havre de paix aux maisons de bois et de bambou, était entouré de rizières verdoyantes et de
-            champs de légumes. Les habitants, des gens simples et travailleurs, vivaient en harmonie avec la nature. C'était
-            dans ce cadre idyllique que Poun grandissait, un chat heureux et chanceux.(village)
+        <div class="header__burger">
+            <span></span>
         </div>
-        <div>
-            <p><img src="../assets/img/red_cat_kunfu.jpg" alt=""></p>
-            <p class="description-text">
-                Dès son plus jeune âge, Poun était fasciné par les combats de boxe. Il passait des heures à observer les
-            mouvements des boxeurs, dont Maksym, un chat robuste et puissant, dans le temple bouddhiste au centre du
-            village, rêvant de devenir un champion lui-même. Un jour, il a décidé de s'entraîner. Il a trouvé un vieux sac
-            de boxe et a commencé à frapper dessus avec ses pattes agiles et rapides. Apprenant vite, il se perfectionnait
-            chaque jour.(red-cat-kungfu)
-        </div>
-        <div>
-            <p><img src="../assets/img/pizza.jpg" alt=""></p>
-            <p class="description-text">
-                En même temps que la boxe, Poun aimait la pizza. L'odeur de la pâte à pizza qui cuit au four le rendait fou, et
-            il adorait le goût du fromage fondu et de la sauce tomate. Un jour, il a décidé d'apprendre à faire des pizzas
-            lui-même. Il a trouvé un livre de recettes et a commencé à suivre les instructions avec patience et
-            méticulosité. Il a vite appris à faire des pizzas délicieuses, rivalisant avec les meilleurs pizzaiolos du
-            village, dont Nafion, un chat connu pour ses pizzas créatives et audacieuses. (pizza)</p>
-        </div>
-        <div>
-            <p><img src="../assets/img/gants-de-box.webp" alt=""></p>
-            <p class="description-text">
-                Un jour, un grand tournoi de boxe a été organisé dans le village. Poun s'est inscrit, déterminé à gagner. Il a
-            combattu avec courage et détermination, ses mouvements précis rappelant ceux des boxeurs qu'il admirait tant. Il
-            a remporté tous ses combats, devenant le champion du village !(gants-de-box)</p>
-        </div>
-        <div>
-            <p><img src="../assets/img/chatcute.jpg" alt=""></p>
-            <p class="description-text">
-                Son combat le plus mémorable fut contre un chaton arrogant du village voisin, connu pour ses coups puissants et
-            sa grande vitesse. Poun, plus petit et plus agile, a utilisé son intelligence et sa technique pour esquiver les
-            attaques de son adversaire et le contrer avec des coups précis. Le combat était intense et serré, mais Poun a
-            finalement triomphé, démontrant sa force et sa persévérance.(chatcute)</p>
-        </div>
-        <div>
-            <p><img src="../assets/img/logo.png" alt=""></p>
-            <p class="description-text">
-                Après sa victoire, Poun a décidé d'ouvrir sa propre pizzeria. Il l'a appelée "Red Cat ThaY", un nom qui
-            reflétait ses origines thaïlandaises et sa passion pour la boxe. La pizzeria est rapidement devenue l'un des
-            endroits les plus populaires du village. Les gens venaient de loin pour goûter ses pizzas délicieuses et pour
-            voir le chat qui boxait, un spectacle fascinant et unique.(logo)</p>
-        </div>
-        <div>
-            <p><img src="../assets/img/villageois.jpg" alt=""></p>
-            <p class="description-text">
-                Poun a vécu une vie heureuse et réussie. Il a été un grand champion de boxe et un excellent pizzaiolo, inspirant
-            tous ceux qui le connaissaient, comme Benjamin, un jeune chat qui admirait Poun et rêvait de devenir un jour
-            comme lui. Il a montré au monde que les chats peuvent réaliser tout ce qu'ils veulent, s'ils y mettent du cœur
-            et de la persévérance.(vilageois)</p>
-        </div>
-        <div>
-            <p><img src="../assets/img/village.jpg" alt=""></p>
-            <p class="description-text">
-                Le village de Poun était un endroit idéal pour un chat comme lui. Il y avait beaucoup d'espace pour courir et
-            jouer, et les habitants étaient toujours heureux de le voir. Poun était un chat heureux et chanceux, et il
-            aimait beaucoup son village.(village)</p>
-        </div>
-        <div>
-            <p><img src="../assets/img/chaton.jpg" alt=""></p>
-            <p class="description-text">
-                Poun a eu beaucoup de chatons avec sa partenaire, une chatte douce et affectueuse. Ils ont élevé leurs chatons
-            ensemble, leur apprenant à boxer et à faire des pizzas. Les chatons de Poun étaient tous vifs et intelligents,
-            et ils ont tous grandi pour devenir des chats heureux et accomplis.(chaton)</p>
-        </div>
-        <div>
-            <p><img src="../assets/img/village.jpg" alt=""></p>
-            <p class="description-text">
-                Poun et sa famille ont vécu heureux pour toujours dans le village. Ils étaient aimés et respectés par tous les
-            habitants, et ils ont apporté beaucoup de joie et de bonheur à la communauté.(village)</p>
-        </div>
-        <div>
-            <p>Voici quelques anecdotes amusantes sur Poun :
-            
-            <p class="description-text">
-                Il aimait porter des petits gants de boxe lorsqu'il faisait des pizzas.
-            Il avait un miaulement très particulier qui ressemblait à un aboiement.
-            Il était toujours prêt à aider les autres, et il était très apprécié par les habitants du village.
-            Poun était un chat unique et spécial. Il a laissé un souvenir impérissable dans le cœur de tous ceux qui l'ont
-            connu.</p>
-        </div>
-        
+        <nav class="header__nav">
+            <div class="header__nav__close"></div>
+            <ul class="header__list">
+                <li><a href="maksym/maksym.html">Maksym</a></li>
+                <li><a href="Ben/">Benjamin</a></li>
+                <li><a href="codeNaf/index.html">Nafion</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="naf-main">
+        <ul>
+            <article id="1">
+                <li>
+                    <p>Dans un petit village thaïlandais, niché au bord d'une rivière paisible, vivait un chat pas comme
+                        les autres.
+                        Son nom était Nafion, et il était connu pour deux choses : son amour pour la nature et son
+                        talent pour la pizza.</p>
+                </li>
+            </article>
+            <article id="2">
+                <li>
+                    <p>Le village, un havre de paix aux maisons de bois et de bambou, était entouré de rizières
+                        verdoyantes et de champs de légumes luxuriants.
+                        Les habitants, des gens simples et chaleureux, vivaient en harmonie avec la nature. C'est dans
+                        ce cadre idyllique que Nafion grandissait, un chat heureux et aventureux.</p>
+                </li>
+            </article>
+            <article id="3">
+                <li>
+                    <p>Dès son plus jeune âge, Nafion était fasciné par la nature. Il passait des heures à explorer les
+                        sentiers de la jungle, à observer les oiseaux et les animaux sauvages, et à se baigner dans la
+                        rivière claire.
+                        Il aimait particulièrement les jeux d'animaux, et il passait des heures à jouer avec ses amis
+                        félins à imiter les animaux qu'il observait.</p>
+                </li>
+            </article>
+            <article id="4">
+                <li>
+                    <p>Nafion aimait aussi la nourriture, surtout les fruits frais et juteux. Il adorait le goût sucré
+                        des gayaves, des mangues, des ananas et des papayes, mais la liste n'en finis pas.
+                        Un jour, il a décidé d'apprendre à cuisiner lui-même. Il a trouvé un livre de recettes et a
+                        commencé à suivre les instructions avec patience et méticulosité.
+                        Il a vite appris à préparer des pizzas délicieuses, certaines avec un goût de papaye, d'autre
+                        avec un goût de fraise !</p>
+                </li>
+            </article>
+            <article id="5">
+                <li>
+                    <p>Un jour, Nafion a décidé de partir à l'aventure. Il a fait son sac à dos, a pris son jembé et est
+                        parti en camping à la mer. Il a marché pendant des heures, traversant des forêts luxuriantes et
+                        des rivières tumultueuses. Il a rencontré de nombreux animaux sauvages, dont des singes
+                        espiègles et des éléphants majestueux.</p>
+                </li>
+            </article>
+            <article id="6">
+                <li>
+                    <p>Lorsque Nafion est arrivé à la mer, il a été émerveillé par sa beauté. Il a passé des journées à
+                    nager dans les vagues chaudes, auprès des tortues et
+                    à explorer les rochers et les grottes. Il a également rencontré d'autres chats comme Maxime et
+                    Benjamin,avec qui il a partagé des moments inoubliables.</p>
+                </li>
+            </article>
+            <article id="7">
+                <li>
+                    <p>Le soir, Nafion aimait s'asseoir autour d'un feu de camp et chanter des chansons avec ses amis.
+                        Il avait une voix douce et mélodieuse, et il aimait partager sa
+                        passion pour la musique avec les autres.</p>
+                </li>
+            </article>
+            <article id="8">
+                <li>
+                    <p>Il y a vécu une vie heureuse et bien remplie. Il a montré au monde que les chats peuvent réaliser
+                    tout ce qu'ils veulent, s'ils y mettent du cœur et de la persévérance.</p>
+                </li>
+            </article>
+            <article id="9">
+                <li>
+                    <p>Le village de Nafion était un endroit idéal pour un chat comme lui. Il y avait beaucoup d'espace
+                        pour courir et jouer, et les habitants étaient toujours heureux de le voir.
+                        c'était un chat heureux et chanceux, et il aimait beaucoup son village.</p>
+                    </li>
+                </article>
+                <a href="#" class="btn-slide-top"><img class="arrow arrow-top" src="../assets/img/arow.png" alt=""></a>
+                <a href="#" class="btn-slide-bottom"><img class="arrow arrow-bottom" src="../assets/img/arow.png" alt=""></a>
+            </ul>
     </main>
-  <footer>
-    <ul>
-        <li><img class= "logo" src="../assets/img/logo.png" alt= "logo Red Cat Thai"/></li>
-        <li><p class="authors">Auteurs : Maksym, Nafion, Benjamin</p></li>
-        <li><p class="plan">Plan du site</p></li>
-        <li><input class="button" type="button" value="Remonter en haut de la page" /></li>
-    </ul>
-</footer>
-<script type="text/javascript" src="./index.js"></script>
+    <footer>
+        <ul>
+            <li><img class="logofooter" src="../assets/img/logo.png" alt="logo Red Cat Thai" /></li>
+            <li>
+                <p class="authors"><span>Auteurs :</span> Maksym, Nafion, Benjamin</p>
+            </li>
+            <li>
+                <p class="plan">Plan du site</p>
+            </li>
+            <li><input class="button" type="button" value="Remonter en haut de la page" /></li>
+        </ul>
+    </footer>
+    <script src="index.js"></script>
 </body>
+
 </html>
