maksym page done

--- a/maksym/maksym.html
+++ b/maksym/maksym.html
@@ -16,32 +16,84 @@
         <li><a class="active" href="maksym/maksym.html">Maksym</a></li>
         <li><a href="Ben/">Benjamin</a></li>
         <li><a href ="CodeNaf/">Nafion</a></li>
+        <li><a href ="../index.html">Home</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <div class="wrapper">
-      <section class="presentaition">
-        <h1 class="presentaition__title">Chat Maksym</h1>
-        <div class="maks__photo">
-          <img src="img/cat_maks.png" alt="Voznichka Maksym">
-        </div>
-        <p class="presentaition__text background_white_tr">Bonjour, invité de notre petit village.
-          Je m'appelle Max.
-          Vous avez visité la page de l'un des créateurs de ce monde félin, et il n'y a de place que pour les chats. Ne manquez pas l'occasion de participer à notre idée et de faire une pause dans votre routine en vous plongeant dans des histoires de chats intéressantes.</p>
-      </section>
-    </div>
+    <section class="presentaition">
+      <h1 class="presentaition__title">Chat Maksym</h1>
+      <div class="maks__photo">
+        <img src="img/cat_maks.png" alt="Voznichka Maksym">
+      </div>
+      <p class="presentaition__text background_white_tr">Bonjour, invité de notre petit village.
+        Je m'appelle Max.
+        Vous avez visité la page de l'un des créateurs de ce monde félin, et il n'y a de place que pour les chats. Ne manquez pas l'occasion de participer à notre idée et de faire une pause dans votre routine en vous plongeant dans des histoires de chats intéressantes.</p>
+    </section>
     <section class="hist">
       <div class="box__anim">
         <div class="sprite"></div>
       </div>
-      <h2 class="hist__title">Mon histoire</h2>
-      <p>L'histoire de Maksym, le chat Muay Thai et roi de la restauration rapide
-        Sous le soleil brûlant de Thaïlande, dans un village paisible bordé par une rivière scintillante, vivait un chat pas comme les autres. Son nom était Maksym, et il était connu pour deux choses : sa passion pour le Muay Thai et son talent pour la restauration rapide.
-        
-        Le village, un havre de paix aux maisons de bois et de bambou, était entouré de rizières verdoyantes et de champs de légumes luxuriants. Les habitants, des gens simples et chaleureux, vivaient en harmonie avec la nature. C'est dans ce cadre idyllique que Maksym grandissait, un chat heureux et énergique.</p>
+      <div class="wrapper">
+        <h2 class="hist__title">Mon histoire</h2>
+        <p class="hist__p-first">L'histoire de Maksym, le chat Muay Thai et roi de la restauration rapide
+          Sous le soleil brûlant de Thaïlande, dans un village paisible bordé par une rivière scintillante, vivait un chat pas comme les autres. Son nom était Maksym, et il était connu pour deux choses : sa passion pour le Muay Thai et son talent pour la restauration rapide.
+        </p>
+        <p class="hist__p-second">
+          Le village, un havre de paix aux maisons de bois et de bambou, était entouré de rizières verdoyantes et de champs de légumes luxuriants. Les habitants, des gens simples et chaleureux, vivaient en harmonie avec la nature. C'est dans ce cadre idyllique que Maksym grandissait, un chat heureux et énergique.
+        </p>
+      </div>
+      <div class="flex-box">
+        <p>Dès son plus jeune âge, Maksym était fasciné par le Muay Thai, l'art martial ancestral de la Thaïlande. Il passait des heures à observer les mouvements fluides et puissants des combattants dans le temple bouddhiste au centre du village, rêvant de devenir un maître lui-même. Un jour, il a décidé de s'entraîner. Il a trouvé un vieux sac de frappe et a commencé à frapper dessus avec ses pattes agiles et rapides, apprenant vite et se perfectionnant chaque jour.</p>
+        <div>
+          <img src="img/boxer.jpg" alt="cat boxer">
+        </div>
+      </div>
+      <div class="flex-box">
+        <div>
+          <img src="img/cook.jpg" alt="cat cook">
+        </div>
+        <p>En même temps que le Muay Thai, Maksym avait un autre talent : la cuisine. Il adorait l'odeur alléchante des plats mijotés dans les petites échoppes du village et le goût savoureux des épices et des ingrédients frais. Un jour, il a décidé d'apprendre à cuisiner lui-même. Il a trouvé un livre de recettes et a commencé à suivre les instructions avec patience et méticulosité. Il a vite appris à préparer des plats délicieux, rivalisant avec les meilleurs chefs du village.</p>
+      </div>
+      <p class="hist__p-third">
+        Un jour, un grand tournoi de Muay Thai a été organisé dans le village. Maksym s'est inscrit, déterminé à gagner. Il a combattu avec courage et détermination, ses mouvements précis rappelant ceux des combattants qu'il admirait tant. Il a remporté tous ses combats, devenant le champion du village !
+
+Son combat le plus mémorable fut contre un chat arrogant du village voisin, connu pour sa force brute et sa vitesse. Maksym, plus petit et plus agile, a utilisé son intelligence et sa technique pour esquiver les attaques de son adversaire et le contrer avec des coups précis et rapides. Le combat était intense et serré, mais Maksym a finalement triomphé, démontrant sa force et sa persévérance.
+
+Après sa victoire, Maksym a décidé d'ouvrir son propre restaurant de restauration rapide. Il l'a appelé "Spicy Cat", un nom qui reflétait sa passion pour la cuisine épicée et son amour des chats. Le restaurant est rapidement devenu l'un des endroits les plus populaires du village. Les gens venaient de loin pour goûter ses plats délicieux et pour voir le chat qui combattait, un spectacle fascinant et unique.
+
+Maksym a vécu une vie heureuse et bien remplie. Il a été un grand champion de Muay Thai et un excellent cuisinier, inspirant tous ceux qui le connaissaient. Il a montré au monde que les chats peuvent réaliser tout ce qu'ils veulent, s'ils y mettent du cœur et de la persévérance.
+
+Le village de Maksym était un endroit idéal pour un chat comme lui. Il y avait beaucoup d'espace pour courir et jouer, et les habitants étaient toujours heureux de le voir. Maksym était un chat heureux et chanceux, et il aimait beaucoup son village.
+
+En plus de son amour pour le Muay Thai et la cuisine, Maksym avait d'autres passions :
+      </p>
+      <div class="flex-box">
+        <p>En plus de son amour pour le Muay Thai et la cuisine, Maksym avait d'autres passions :
+
+          Passer du temps avec ses amis: Il aimait se retrouver avec ses amis félins pour discuter, jouer et partager un repas.
+          Jouer à l'UFC 5: Il était un grand fan de jeux vidéo et adorait passer des heures à jouer à l'UFC 5, s'imaginant combattre dans l'octogone.
+          Profiter de la nature: Il aimait se promener dans la jungle luxuriante, observer les animaux sauvages et pêcher dans la rivière paisible.
+          Se détendre devant un film ou une série: Il aimait se détendre le soir en regardant un bon film ou une série télévisée avec ses amis.
+          Créer de nouvelles choses: Il était un chat très créatif et aimait inventer de nouvelles recettes, de nouveaux jeux et de nouvelles histoires.
+          Rencontrer de nouvelles personnes: Il était toujours ouvert à la rencontre de nouvelles personnes et de nouveaux chats, et il aimait apprendre à connaître leurs cultures et leurs traditions.
+          Maksym était un chat unique et spécial. Il a laissé un souvenir impérissable dans le cœur de tous ceux qui l'ont connu.</p>
+        <div>
+          <img src="img/player.jpg" alt="cat player">
+        </div>
+      </div>
     </section>
   </main>
+  <footer class="footer">
+    <span>&#169; GROUP: Maksym, Nafion, Benjamin</span>
+  </footer>
+
+  <div class="pop-up-button">
+    <img src="img/dont_touch.png" alt="dont touch">
+  </div>
+  <div class="pop-up">
+    <img src="img/maksym.png" alt="scary face">
+  </div>
   <script src="maksym.js"></script>
 </body>
 </html>
