--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="header__nav__close"></div>
       <ul class="header__list">
         <li><a href="maksym/maksym.html">Maksym</a></li>
-        <li><a href="Ben/">Benjamin</a></li>
+        <li><a href="./Ben/pageben.html">Benjamin</a></li>
         <li><a href ="CodeNaf/">Nafion</a></li>
       </ul>
     </nav>
