--- a/Ben/pageben.html
+++ b/Ben/pageben.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pageben.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
     <title>Page de Ben</title>
 </head>
 
@@ -28,43 +31,77 @@
     <main>
         <h1>L'histoire de Benjamin, le chat funambule, navigateur et maître des tempêtes</h1>
         <section class="histoire">
-            <article>
+            <article id="un">
+                <div>Sur une île tropicale baignée de soleil, caressée par les alizés et bordée d'une mer turquoise,(image ile tropicale) vivait un chat pas comme les autres. Son nom était Benjamin, et il était connu pour trois choses : sa passion pour la
+                    haute voltige, la voile et son talent pour dompter les tempêtes.</div>
+                <div><img src="./assets/img/plage.jpg" />
+                </div>
 
-                Sur une île tropicale baignée de soleil, caressée par les alizés et bordée d'une mer turquoise,(image ile tropicale) vivait un chat pas comme les autres. Son nom était Benjamin, et il était connu pour trois choses : sa passion pour la haute voltige, la
-                voile et son talent pour dompter les tempêtes.(image: surf)
-            </article>
-            <article>L'île, un havre de paix aux maisons de bois et aux toits de chaume, était entourée de récifs coralliens et de lagons poissonneux. Les habitants, des gens simples et chaleureux, vivaient en harmonie avec la nature. C'est dans ce cadre idyllique
-                que Benjamin grandissait, un chat agile, intrépide et musicien dans l'âme.</article>
 
-            <article>
-                Dès son plus jeune âge, Benjamin était fasciné par les hauteurs, la mer et la musique. Il passait des heures à observer les oiseaux voler dans le ciel, à grimper aux arbres les plus hauts du village et à écouter les rythmes endiablés du funk qui s'échappaient
-                des tavernes locales. Un jour, il a décidé de combiner ses passions. Il a trouvé une corde et a commencé à marcher dessus, en jouant de la guitare et en chantant des airs funky.(image : chat corde) Benjamin était un véritable artiste.
-                Sa voix douce et mélodieuse se mêlait aux riffs endiablés de sa guitare, créant une musique unique et envoûtante. Son talent était tel qu'il attirait les foules partout où il allait.(image: concert)
             </article>
-            <article>
-                Un jour, Benjamin a rencontré Dumbo, (image: dumbo) un éléphant pas comme les autres. Dumbo était capable de voler grâce à ses oreilles immenses. Il était fasciné par la musique de Benjamin et les deux amis ont décidé de voyager ensemble. Ils ont navigué
-                sur toutes les mers du monde, affronté les tempêtes les plus violentes et partagé leur musique avec les autres. Benjamin jouait de la guitare et chantait, tandis que Dumbo volait au-dessus d'eux, répandant la joie et la bonne humeur.(image
-                : dumbo vole)
-            </article>
-            <article>
-                Leur voyage a été long et périlleux. Ils ont traversé des océans déchaînés, escaladé des montagnes escarpées et traversé des déserts arides. Mais grâce à leur courage, leur amitié et leurs talents uniques, ils ont réussi à surmonter tous les obstacles.(image:
-                tempete) Partout où ils allaient, Benjamin et Dumbo étaient accueillis en héros. Ils ont montré au monde que les chats et les éléphants peuvent réaliser tout ce qu'ils veulent, s'ils y mettent du cœur, de la persévérance et de l'amitié.
-            </article>
-            <article>
-                De retour sur leur île tropicale, Benjamin et Dumbo étaient des chats et des éléphants heureux et comblés. Ils avaient vécu des aventures extraordinaires et avaient partagé leur passion avec le monde entier.(image: dumbo village) En plus de ses passions
-                pour la haute voltige, la voile, la musique et les tempêtes, Benjamin avait d'autres passions : La pêche: Il aimait pêcher des poissons frais pour son repas et pour ses amis. La natation: Il aimait nager dans les eaux turquoises de la
-                mer et explorer les récifs coralliens.(image : chat nage) Raconter des histoires: Il était un excellent conteur et aimait partager ses aventures avec les autres. Rencontrer de nouvelles personnes: Il était toujours ouvert à la rencontre
-                de nouvelles personnes et de nouveaux animaux, et il aimait apprendre à connaître leurs cultures et leurs traditions. Benjamin était un chat unique et spécial. Il a laissé un souvenir impérissable dans le cœur de tous ceux qui l'ont connu.
+            <article id="deux">
+                <div>L'île, un havre de paix aux maisons de bois et aux toits de chaume, était entourée de récifs coralliens et de lagons poissonneux. Les habitants, des gens simples et chaleureux, vivaient en harmonie avec la nature. C'est dans ce cadre idyllique
+                    que Benjamin grandissait, un chat agile, intrépide et musicien dans l'âme.</div>
+                <div><img src="./assets/img/chat surf.jpg" /></div>
+
             </article>
 
+            <article id="trois">
+                <div>Dès son plus jeune âge, Benjamin était fasciné par les hauteurs, la mer et la musique. Il passait des heures à observer les oiseaux voler dans le ciel, à grimper aux arbres les plus hauts du village et à écouter les rythmes endiablés du
+                    funk qui s'échappaient des tavernes locales. Un jour, il a décidé de combiner ses passions. Il a trouvé une corde et a commencé à marcher dessus, en jouant de la guitare et en chantant des airs funky.(image : chat corde) Benjamin était
+                    un véritable artiste. Sa voix douce et mélodieuse se mêlait aux riffs endiablés de sa guitare, créant une musique unique et envoûtante. Son talent était tel qu'il attirait les foules partout où il allait.</div>
+                <div><img src="./assets/img/chatguitare.jpg" /></div>
+
+
+            </article>
+            <article id="quatre">
+                <div>Un jour, Benjamin a rencontré Dumbo, (image: dumbo) un éléphant pas comme les autres. Dumbo était capable de voler grâce à ses oreilles immenses. Il était fasciné par la musique de Benjamin et les deux amis ont décidé de voyager ensemble.
+                    Ils ont navigué sur toutes les mers du monde, affronté les tempêtes les plus violentes et partagé leur musique avec les autres. Benjamin jouait de la guitare et chantait, tandis que Dumbo volait au-dessus d'eux, répandant la joie et
+                    la bonne humeur.</div>
+                <div><img src="./assets/img/dumbo vole.jpg" /></div>
+
+            </article>
+            <article id="cinq">
+                <div>Leur voyage a été long et périlleux. Ils ont traversé des océans déchaînés, escaladé des montagnes escarpées et traversé des déserts arides. Mais grâce à leur courage, leur amitié et leurs talents uniques, ils ont réussi à surmonter tous
+                    les obstacles. Partout où ils allaient, Benjamin et Dumbo étaient accueillis en héros. Ils ont montré au monde que les chats et les éléphants peuvent réaliser tout ce qu'ils veulent, s'ils y mettent du cœur, de la persévérance et de
+                    l'amitié.</div>
+                <div><img src="./assets/img/tempete.jpeg" /></div>
+
+
+            </article>
+            <article id="six">
+                <div> De retour sur leur île tropicale, Benjamin et Dumbo étaient des chats et des éléphants heureux et comblés. Ils avaient vécu des aventures extraordinaires et avaient partagé leur passion avec le monde entier.(image: dumbo village) En plus
+                    de ses passions pour la haute voltige, la voile, la musique et les tempêtes, Benjamin avait d'autres passions : La pêche: Il aimait pêcher des poissons frais pour son repas et pour ses amis. La natation: Il aimait nager dans les eaux
+                    turquoises de la mer et explorer les récifs coralliens.(image : chat nage) Raconter des histoires: Il était un excellent conteur et aimait partager ses aventures avec les autres. Rencontrer de nouvelles personnes: Il était toujours
+                    ouvert à la rencontre de nouvelles personnes et de nouveaux animaux, et il aimait apprendre à connaître leurs cultures et leurs traditions. Benjamin était un chat unique et spécial. Il a laissé un souvenir impérissable dans le cœur
+                    de tous ceux qui l'ont connu.</div>
+                <div>
+                    <img src="./assets/img/dumbovillage.jpg" />
+                </div>
+
+
+            </article>
+
+
+            <input class="slider" type="range" list="tickmarks" value="0" step="10" min="0" max="50">
+            <datalist id="tickmarks">
+<option value="0"></option>
+<option value="10"></option>
+<option value="20"></option>
+<option value="30"></option>
+<option value="40"></option>
+<option value="50"></option>
+
+
+</datalist>
+        </section>
+    </main>
+
+    <footer>
+
+        <section class="mer">
 
         </section>
-        <section class="mer">
-    
-  </section>
-    </main>
-    
-    <footer>
         <ul>
             <li><img class="logofooter" src="./assets/img/logo.png" alt="logo Red Cat Thai" /></li>
             <li>
