Ajout du lien vers naf

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class="header__list">
         <li><a href="maksym/maksym.html">Maksym</a></li>
         <li><a href="./Ben/pageben.html">Benjamin</a></li>
-        <li><a href ="CodeNaf/">Nafion</a></li>
+        <li><a href ="CodeNaf/index.html">Nafion</a></li>
       </ul>
     </nav>
   </header>
