Correction des liens.

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         Son nom était Poun, et il avait deux passions : la boxe et la pizza. (villageois)</p>
     </div>
     <div class="article" id="article-2">
-        <p><img src="../assets/img/village.jpg" alt="">
+        <p><img src="./assets/img/village.jpg" alt="">
         <p class="description-text">
             Le village, un havre de paix aux maisons de bois et de bambou, était entouré de rizières verdoyantes et de
         champs de légumes. Les habitants, des gens simples et travailleurs, vivaient en harmonie avec la nature. C'était
         dans ce cadre idyllique que Poun grandissait, un chat heureux et chanceux.(village)
     </div>
     <div class="article" id="article-3">
-        <p><img src="../assets/img/red_cat_kunfu.jpg" alt=""></p>
+        <p><img src="./assets/img/red_cat_kunfu.jpg" alt=""></p>
         <p class="description-text">
             Dès son plus jeune âge, Poun était fasciné par les combats de boxe. Il passait des heures à observer les
         mouvements des boxeurs, dont Maksym, un chat robuste et puissant, dans le temple bouddhiste au centre du
@@ -47,7 +47,7 @@
         chaque jour.(red-cat-kungfu)
     </div>
     <div class="article" id="article-4">
-        <p><img src="../assets/img/pizza.jpg" alt=""></p>
+        <p><img src="./assets/img/pizza.jpg" alt=""></p>
         <p class="description-text">
             En même temps que la boxe, Poun aimait la pizza. L'odeur de la pâte à pizza qui cuit au four le rendait fou, et
         il adorait le goût du fromage fondu et de la sauce tomate. Un jour, il a décidé d'apprendre à faire des pizzas
@@ -56,14 +56,14 @@
         village, dont Nafion, un chat connu pour ses pizzas créatives et audacieuses. (pizza)</p>
     </div>
     <div class="article" id="article-5">
-        <p><img src="../assets/img/gants-de-box.webp" alt=""></p>
+        <p><img src="./assets/img/gants-de-box.webp" alt=""></p>
         <p class="description-text">
             Un jour, un grand tournoi de boxe a été organisé dans le village. Poun s'est inscrit, déterminé à gagner. Il a
         combattu avec courage et détermination, ses mouvements précis rappelant ceux des boxeurs qu'il admirait tant. Il
         a remporté tous ses combats, devenant le champion du village !(gants-de-box)</p>
     </div>
     <div class="article" id="article-6">
-        <p><img src="../assets/img/chatcute.jpg" alt=""></p>
+        <p><img src="./assets/img/chatcute.jpg" alt=""></p>
         <p class="description-text">
             Son combat le plus mémorable fut contre un chaton arrogant du village voisin, connu pour ses coups puissants et
         sa grande vitesse. Poun, plus petit et plus agile, a utilisé son intelligence et sa technique pour esquiver les
@@ -71,7 +71,7 @@
         finalement triomphé, démontrant sa force et sa persévérance.(chatcute)</p>
     </div>
     <div class="article" id="article-7">
-        <p><img src="../assets/img/logo.png" alt=""></p>
+        <p><img src="./assets/img/logo.png" alt=""></p>
         <p class="description-text">
             Après sa victoire, Poun a décidé d'ouvrir sa propre pizzeria. Il l'a appelée "Red Cat ThaY", un nom qui
         reflétait ses origines thaïlandaises et sa passion pour la boxe. La pizzeria est rapidement devenue l'un des
@@ -79,7 +79,7 @@
         voir le chat qui boxait, un spectacle fascinant et unique.(logo)</p>
     </div>
     <div class="article" id="article-8">
-        <p><img src="../assets/img/villageois.jpg" alt=""></p>
+        <p><img src="./assets/img/villageois.jpg" alt=""></p>
         <p class="description-text">
             Poun a vécu une vie heureuse et réussie. Il a été un grand champion de boxe et un excellent pizzaiolo, inspirant
         tous ceux qui le connaissaient, comme Benjamin, un jeune chat qui admirait Poun et rêvait de devenir un jour
@@ -87,21 +87,21 @@
         et de la persévérance.(vilageois)</p>
     </div>
     <div class="article" id="article-9">
-        <p><img src="../assets/img/village.jpg" alt=""></p>
+        <p><img src="./assets/img/village.jpg" alt=""></p>
         <p class="description-text">
             Le village de Poun était un endroit idéal pour un chat comme lui. Il y avait beaucoup d'espace pour courir et
         jouer, et les habitants étaient toujours heureux de le voir. Poun était un chat heureux et chanceux, et il
         aimait beaucoup son village.(village)</p>
     </div>
     <div class="article" id="article-10">
-        <p><img src="../assets/img/chaton.jpg" alt=""></p>
+        <p><img src="./assets/img/chaton.jpg" alt=""></p>
         <p class="description-text">
             Poun a eu beaucoup de chatons avec sa partenaire, une chatte douce et affectueuse. Ils ont élevé leurs chatons
         ensemble, leur apprenant à boxer et à faire des pizzas. Les chatons de Poun étaient tous vifs et intelligents,
         et ils ont tous grandi pour devenir des chats heureux et accomplis.(chaton)</p>
     </div>
     <div class="article" id="article-11">
-        <p><img src="../assets/img/village.jpg" alt=""></p>
+        <p><img src="./assets/img/village.jpg" alt=""></p>
         <p class="description-text">
             Poun et sa famille ont vécu heureux pour toujours dans le village. Ils étaient aimés et respectés par tous les
         habitants, et ils ont apporté beaucoup de joie et de bonheur à la communauté.(village)</p>
